<resources>
    <string name="app_name">SmartLight</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="title_lights">Lights</string>
    <string name="title_groups">Groups</string>
    <string name="title_scenes">Scenes</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_account">Account</string>
    <string name="title_settings">Settings</string>
    <string name="drawer_title">Menu</string>
    <string name="guide_skip">Skip</string>
    <string name="title_activity_multi_select_demo">MultiSelectDemoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_delete">Delete</string>
    <string name="delete_mode">Delete</string>
    <string name="searching">Searching…</string>
    <string name="menu_sort">Sort By</string>
    <string name="menu_new">New</string>
    <string name="title_activity_color_picker">Color Picker</string>
    <string name="color_name_hint">Color name</string>
    <string name="menu_delete">Delete</string>
    <string name="guide_done">Done</string>
    <string name="save">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_colon">Email:</string>
    <string name="password_colon">Password: </string>
    <string name="forget_password_question_mark"><u>Forget Password?</u></string>
    <string name="log_in">Login</string>
    <string name="register">Register</string>
    <string name="log_in_success">Login Success</string>
    <string name="register_success">Register Success</string>
    <string name="log_out">Log Out</string>
    <string name="input_action_name">Input action name</string>
    <string name="edit_action">Edit Action</string>
    <string name="add_action">Add Action</string>
    <string name="set_light_name">Set light name</string>
    <string name="input_dialog_empty">The field is empty</string>
    <string name="light_model_format">Model: %s</string>
    <string name="group_num_format">Lights: %d</string>
    <string name="no_data">No data, click to load data</string>
    <string name="default_no_data">No data</string>
    <string name="title_activity_add_light_groups">AddLightGroupsActivity</string>
    <string name="group_name">Group name</string>
    <string name="empty_group_name">Group name cannot be empty</string>
    <string name="menu_edit">Change name</string>
    <string name="menu_edit_name">Edit name</string>
    <string name="action_done">Done</string>
    <string name="edit_light_name">Edit light name</string>
    <string name="title_activity_light_info">Light Info</string>
    <string name="action_spinner_default">***Actions***</string>
    <string name="color_spinner_custom">Custom color</string>
    <string name="never_used">Never used</string>
    <string name="scene_name">Scene Name</string>
    <string name="Lights">Lights</string>
    <string name="light_groups">Groups</string>
    <string name="groups">Groups</string>
    <string name="edit_group">Edit group</string>
    <string name="add_group">Create new group</string>
    <string name="edit_scenes">Edit scenes</string>
    <string name="add_scenes">Create new scenes</string>
    <string name="empty_scene_name">Scene name cannot be empty</string>
    <string name="brightness">Brightness</string>
    <string name="ct">CT</string>
    <string name="exit_prompt">Are you sure to exit?</string>
    <string name="title_activity_add_schedule">Schedule</string>
    <string name="schedule_name">Schedule name</string>
    <string name="target_label">Target</string>
    <string name="none_target">None</string>
    <string name="schedule_settings">Settings</string>
    <string name="schedule_settings_format" formatted="false">State:%s BR:%d CT:%d</string>
    <string name="state_off">Off</string>
    <string name="state_on">On</string>
    <string name="title_activity_pick_target">Pick target</string>
    <string name="title_activity_add_lights2">Add Lights</string>
    <string name="title_activity_add_switchs">Add Switchs</string>
    <string name="action_select_all">Select all</string>
    <string name="action_addlights_done">Done</string>
    <string name="action_add_lights">Add lights</string>
    <string name="action_multiple">Multiple Mode</string>
    <string name="action_single">Single Mode</string>
    <string name="header_selected_lights">All lights (%d)</string>
    <string name="lights_multiple_empty">Select at least 1 light first</string>
    <string name="lights_multiple_title_1light">1 light</string>
    <string name="lights_multiple_title">%d lights</string>
    <string name="scene">Scene</string>
    <string name="scene_control">Scene</string>
    <string name="empty_schedule_name">Schedule name cannot be empty</string>
    <string name="empty_schedule_target">Pick target first</string>
    <string name="schedule_repeat_time">Repeat</string>
    <string name="repeat_none">None</string>
    <string name="title_activity_repeat_days">Repeat days</string>
    <string name="repeat_everyday">Everyday</string>
    <string name="profile_sync">Sync</string>
    <string name="scene_apply">Apply</string>
    <string name="sync_configurations">Sync Configurations</string>
    <string name="default_home_page">Default Home Page</string>
    <string name="action_show_mode">Show Mode</string>
    <string name="scene_last_used">%s</string>
    <string name="set_remote_pwd">Enable remote control</string>
    <string name="change_password">Change password</string>
    <string name="input_remotepwd_hint">4 digits password</string>
    <string name="input_remotepwd_title">Enable remote control</string>
    <string name="transfer_hint">Input admin password</string>
    <string name="transfer_title">Transfer server</string>
    <string name="remotepwd_prompt">The password should be 4 digits</string>
    <string name="title_activity_change_password">Change password</string>
    <string name="change_password_hint">Leave blank if not change</string>
    <string name="scene_close_all">Close</string>
    <string name="change_pwd_async_msg">Saving...</string>
    <string name="set_pwd_async_msg">Verifying password...</string>
    <string name="kii_extension_return_null">Cannot get server result</string>
    <string name="model">Model</string>
    <string name="model_text">Medium Text</string>
    <string name="mac_address">MAC</string>
    <string name="status_local_format">Local, %s</string>
    <string name="status_remote">Remote controllable</string>
    <string name="status_no_password">Remote without password</string>
    <string name="status_label">Status</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_text">Input your verified email address to reset password.</string>
    <string name="reset_password_hint">Input email</string>
    <string name="invalid_email">Invalid email address!</string>
    <string name="reset_password_success">Reset password success, please check your new password in your email.</string>
    <string name="color_picker_label">Color Picker</string>
    <string name="ct_label">Color Temperature</string>
    <string name="local">Local</string>
    <string name="remote">Remote</string>
    <string name="roaming">Roaming</string>
    <string name="confirm_log_in">Not logged in, log in now?</string>
    <string name="action_addlights_network">Network build</string>
    <string name="package_network">Network build</string>
    <string name="action_addlights_unnetwork">Reset Led Wifi</string>
    <string name="addlights_nolight_prompt">Cannot find any lights. Do you want to start network building?</string>
    <string name="addlights_resetall">Are you sure to reset all lights\' wifi?</string>
    <string name="title_activity_network_build">Network building</string>
    <string name="error_email_empty">Email is empty!</string>
    <string name="error_password_empty">Password is empty!</string>
    <string name="error_invalid_email">Invalid Email!</string>
    <string name="error_password_too_short">Password is too short!</string>
    <string name="check_firmware_update">Firmware Update</string>
    <string name="checking_firmware_update">Checking firmware update…</string>
    <string name="syncing">Syncing...</string>
    <string name="saving">Saving...</string>
    <string name="upgrading">Updating…</string>
    <string name="no_upgrade_available">No firmware upgrade.</string>
    <string name="sync_schedule_failed">Save failed, please try again later</string>
    <string name="enable_remote_succ">Enable remote control successfully</string>
    <string name="enable_remote_fail">Enbale remote control failed</string>
    <string name="enable_remote_part_succ">Part of lights enable remote control succesfull, check their status.</string>
    <string name="start_upgrade_fw">Already start firmware upgrade</string>
    <string name="upgrade_fw_fail">Firmware upgrade failed, try again later</string>
    <string name="light_name_local">%s (Local)</string>
    <string name="light_name_remote_enabled">%s (Remote enabled)</string>
    <string name="light_name_remote">%s (Remote)</string>
    <string name="chg_pwd_none">You need to set one of admin password or remote password</string>
    <string name="chg_pwd_need_adminpwd">Current admin password is required</string>
    <string name="chg_pwd_admin_confirm">New admin password is not confirmed</string>
    <string name="chg_pwd_remote_4">Remote password must be 4 digits</string>
    <string name="chg_pwd_remote_confirm">New remote password is not confirmed</string>
    <string name="chg_pwd_succ">Change password successfully</string>
    <string name="chg_pwd_part_succ">" light(s) change password successfully. The following lights change password failed: "</string>
    <string name="chg_pwd_all_fail">Change password all failed, please check current admin password</string>
    <string name="ct_warm">Warm</string>
    <string name="ct_cold">Cold</string>
    <string name="title_activity_choose_site">ChooseSiteActivity</string>
    <string name="choose_server_location_label">Please choose nearest server location</string>
    <string name="server_us">United States</string>
    <string name="server_sg">Singapore</string>
    <string name="server_jp">Japan</string>
    <string name="server_cn">China</string>
    <string name="transfer_server">Transfer server</string>
    <string name="transfering_msg">Transfering...</string>
    <string name="curr_admin_pwd">Current admin password</string>
    <string name="new_admin_pwd">New admin password</string>
    <string name="confirm_new_admin">Confirm new admin password</string>
    <string name="new_remote_pwd">New remote password</string>
    <string name="confirm_new_remote">Confirm new remote password</string>
    <string name="str_entrpass">Enter Password:</string>
    <string name="str_start">Start</string>
    <string name="str_keeppass">Remember Password</string>
    <string name="choose_site">Server Select</string>
    <string name="time_num">seconds</string>
    <string name="router">Router: </string>
    <string name="num">100</string>
    <string name="ssid">SSID: </string>
    <string name="light_name">Name: </string>
    <string name="ip">IP: </string>
    <string name="is_remote">Remote：</string>
    <string name="pwd">PWD: </string>
    <string name="mac">MAC: </string>
    <string name="edit_type">._ 0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="enable_ssid">Enable SSID</string>
    <string name="dlna_introduction">DLNA是一项无线传输技术，可以实现电器与移动设备互通共享，一般用于家庭娱乐系统。\n   可以通过阳光小智打开DLNA功能，就可以将音乐推送到电器端播放，享受音乐。\n   以下音乐播放器支持DLNA，请点击对应的图标来选择播放器播放音乐吧...</string>
    <string name="kgplayer">酷狗音乐</string>
    <string name="qqplayer">QQ音乐</string>
</resources>