<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yankon.smart.MainActivity">

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_action_select_all"
        android:orderInCategory="99"
        android:title="@string/action_select_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_show_mode"
        android:orderInCategory="100"
        android:title="@string/action_show_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_multiple"
        android:orderInCategory="100"
        android:title="@string/action_multiple"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="101"
        android:title="@string/action_add_lights"
        app:showAsAction="never" />

</menu>
