<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pro_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_site"
            android:layout_centerInParent="true"
            android:textSize="@dimen/title_size"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@color/content_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_server_location_label"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_us"
            android:layout_marginTop="80dp"
            android:text="@string/server_us"
            style="@style/ChooseSiteBtn"/>

        <Button
            android:id="@+id/btn_sg"
            android:layout_below="@+id/btn_us"
            android:layout_marginTop="10dp"
            android:text="@string/server_sg"
            style="@style/ChooseSiteBtn"/>

        <Button
            android:id="@+id/btn_jp"
            android:layout_below="@+id/btn_sg"
            android:layout_marginTop="10dp"
            android:text="@string/server_jp"
            style="@style/ChooseSiteBtn"/>

        <Button
            android:id="@+id/btn_cn3"
            android:layout_below="@+id/btn_jp"
            android:layout_marginTop="10dp"
            android:text="@string/server_cn"
            style="@style/ChooseSiteBtn"/>


    </RelativeLayout>

</LinearLayout>
