<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pro_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/tv_introduction"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18"
        android:cacheColorHint="#00000000"
        android:padding="10dp"
        android:text="@string/dlna_introduction"
        android:textSize="30sp"
        android:background="@color/content_background"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/di" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kgplayer"
            android:background="@drawable/button_01"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/btn_kgplayer" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qqplayer"
            android:background="@drawable/button_01"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/btn_qqplayer" />
    </LinearLayout>


</LinearLayout>
