<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yankon.smart.fragments.ProfileFragment"
    android:background="@drawable/pro_bg">

    <include layout="@layout/title_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/content_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="center_horizontal"
            android:id="@+id/email"
            android:text="@string/hello_world"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_below="@id/email"
            android:text="@string/profile_sync"
            android:id="@+id/sync_button"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/button_01"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_below="@+id/sync_button"
            android:text="@string/log_out"
            android:id="@+id/log_out_button"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/button_04"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

</LinearLayout>
